--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
            </div>
          </div>
 
-         <div class="col-md-4 cat3 d-flex justify-content-between  align-items-center">
+         <div class="col-md-4">
+           <div class="cat3 d-flex justify-content-between align-items-center">
           <h1>Shoes</h1>
           <img src="images/categories/shoes.png" alt="">
          </div>
